--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -94,7 +94,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #312450;
+		background: #273952;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -193,10 +193,10 @@ input, select, textarea {
 		}
 
 			h1.major:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: linear-gradient(to right, #5e42a6, #b74e91);
+				background-image: -moz-linear-gradient(to right, ##273952, #b74e91);
+				background-image: -webkit-linear-gradient(to right, #273952, #b74e91);
+				background-image: -ms-linear-gradient(to right, #273952, #b74e91);
+				background-image: linear-gradient(to right, ##273952, #b74e91);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
@@ -3520,7 +3520,7 @@ input, select, textarea {
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #312450;
+		background: #3a4750;
 		cursor: default;
 		height: 100vh;
 		left: 0;
@@ -3869,7 +3869,7 @@ input, select, textarea {
 /* Intro */
 
 	#intro {
-		background:#5e42a6;
+		background:#1d3e53;
 		background-attachment: fixed;
 		background-image: url("images/flat-mountain.svg");
 		background-position: top right;
