--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3757,14 +3757,14 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:before {
-				background: #3c2c62;
+				background: #223542;
 			}
 
 			#sidebar nav a:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: linear-gradient(to right, #5e42a6, #b74e91);
+				background-image: -moz-linear-gradient(to right, #2b4252, #8db0c9);
+				background-image: -webkit-linear-gradient(to right, #2b4252, #8db0c9);
+				background-image: -ms-linear-gradient(to right, #2b4252, #8db0c9);
+				background-image: linear-gradient(to right, #2b4252, #8db0c9);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
