--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -193,10 +193,10 @@ input, select, textarea {
 		}
 
 			h1.major:after {
-				background-image: -moz-linear-gradient(to right, ##273952, #b74e91);
+				background-image: -moz-linear-gradient(to right, #273952, #b74e91);
 				background-image: -webkit-linear-gradient(to right, #273952, #b74e91);
 				background-image: -ms-linear-gradient(to right, #273952, #b74e91);
-				background-image: linear-gradient(to right, ##273952, #b74e91);
+				background-image: linear-gradient(to right, #273952, #b74e91);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
@@ -2548,11 +2548,11 @@ input, select, textarea {
 				}
 
 				.wrapper.style3 .icon.major:before {
-					color: #b74e91;
+					color: #4c6983;
 				}
 
 				.wrapper.style3-alt .icon.major:before {
-					color: #953d75;
+					color: #4c6983;
 				}
 
 /* Image */
@@ -3236,27 +3236,27 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			background-color: #1d3e53;
 		}
 
 		.wrapper.style1-alt {
-			background-color: #493382;
+			background-color: #1d3e53;
 		}
 
 		.wrapper.style2 {
-			background-color: #5052b5;
+			background-color: #7393a7;
 		}
 
 		.wrapper.style2-alt {
-			background-color: #3e4094;
+			background-color: #7393a7;
 		}
 
 		.wrapper.style3 {
-			background-color: #d3006c
+			background-color: #4c6983;
 		}
 
 		.wrapper.style3-alt {
-			background-color: #d3006c;
+			background-color: #4c6983;
 		}
 
 		.wrapper.fullscreen {
