--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3232,7 +3232,7 @@ input, select, textarea {
 			}
 
 		.wrapper.alt {
-			background-color: #261c3e;
+			background-color: #1d3e53;
 		}
 
 		.wrapper.style1 {
@@ -3366,7 +3366,7 @@ input, select, textarea {
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		background-color: #5e42a6;
+		background-color:#273952;
 		cursor: default;
 		padding: 1.75em 2em;
 	}
